@@ -14,6 +14,12 @@ describe Druid::ElementLocators do
     expect(button).to be_instance_of Druid::Elements::Button
   end
 
+  it "should find all button elements" do
+    expect(driver).to receive(:buttons).with(:id => 'blah').and_return([driver])
+    elements = page.button_elements(:id => 'blah')
+    expect(elements[0]).to be_instance_of Druid::Elements::Button
+  end
+
   it "should find a text field element" do
     expect(driver).to receive(:text_field).with(:id => 'blah').and_return(driver)
     text_field = page.text_field_element(:id => 'blah')
